--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Syed Ebaad's Portfolio</h1>
 	<h2>I'm a web developer</h2>
     <hr/>
-    <a href="./public/movie-ranking.html"> Movie ranking Project</a>
+   <h3><a href="./public/movie-ranking.html"> Movie ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" height="250" alt ="movie ranking project preview">
-    <a href="./public/birthday-invite.html">Birthday invite</a>
+   <h3> <a href="./public/birthday-invite.html">Birthday invite</a></h3>
     <img src="./assets/images/birthday-invite.png" alt ="Birthday Invite" height="250" alt="birthday invite preview">
     <hr/>
     <a href="./public/about.html">About me</a>
