--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,14 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>The best movies according to Syed</h1>
+<h2>My top 2023 movies are</h2>
+
+<hr>
+
+<h3>Jawan</h3>
+<p>Action packed and swaggy.</p>
+
+<h3>Dunki</h3>
+<p>Family comedy drama, well performed.
+</p>
+
+<h3>Animal</h3>
+<p>Bold and new genre</p>
